tests/ui/empty_tag.stderr
error: Invalid @tag annotation format
       help: expected '@tag <tag_name>'
       note: example '@tag users' or '@tag authentication'
 --> tests/ui/empty_tag.rs:8:1
  |
8 | /// @tag
  | ^^^^^^^^

warning: unused import: `axum::response::Json`
 --> tests/ui/empty_tag.rs:3:5
  |
3 | use axum::response::Json;
  |     ^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default
